--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
     defaultConfig {
         applicationId "mbaas.com.nifcloud.androidsegmentuserapp"
         minSdkVersion 16
-        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,7 +38,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     // Core library
     androidTestImplementation 'androidx.test:core:1.2.0'
 
@@ -57,4 +56,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation files('libs/NCMB.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //同期処理を使用する場合はこちらを追加していただく必要があります
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
 }
